added some html codes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-    <div class='quote-box'>
+    <div class='quote-box'>w
         Hello World 
     </div>
     <div class='buttons'>
