Finished the website

--- a/index.html
+++ b/index.html
@@ -1,24 +1,47 @@
-<!DOCTYPE html>
-<head>
-    <link rel="stylesheet" href="style.css">
-    <script src='javascript.js'></script>
-</head>
-<body>
 
-    <div class='quote-box'>w
-        Hello World 
-    </div>
-    <div class='buttons'>
-        <button type="button">Stephen Curry</button>
-        <button type="button">Dwayne Johnson</button>
-        <button type="button">Kevin Durant</button>
-        <button type="button">Click Me!</button>
-        <button type="button">Joses Gabriel Lu<button>
-    </div>
+<html>
+    <head>
+        <link rel="stylesheet" href="style.css">
+        <script src='javascript.js'></script>
+    </head>
+    <body>
+
+        <div class='quote-box'>
+            <h3 id='quote-message'>All-time Best NBA Players' Quotes</h3>
+            <h6 id='quote-person'>Anonymous</h6>
+        </div>
+
+        <div class='buttons'>
+            <div class='nba-image'>
+                <img src="assets/nba4.png" id='curry-img'>
+                <button type="button" id='curry-quote' class="btn-click">Stephen Curry</button>
+            </div>
+
+            <div class='nba-image'>
+                <img src="assets/nba1.png" id='jordan-img'>
+                <button type="button" id='jordan-quote' class="btn-click">Michael Jordan</button>
+            </div>
+
+            <div class='nba-image'>
+                <img src="assets/nba2.png" id='durant-img'>
+                <button type="button" id='durant-quote' class="btn-click">Kevin Durant</button>
+            </div>
+
+            <div class='nba-image'>
+                <img src="assets/nba5.png" id='kobe-img'>
+                <button type="button" id='kobe-quote' class="btn-click">Kobe Bryant</button>
+            </div>
+
+            <div class='nba-image' >
+                <img src="assets/nba3.png" id='lebron-img'>
+                <button type="button" id='lebron-quote' class="btn-click">Lebron James</button>
+            </div>
+        </div>
 
 
+        <script src="quotes.js"></script>
 
+    </body>
+    
 
-
-</body>
-
+</html>
