--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <body>
 
         <div class='quote-box'>
+            <img src='assets/nbalogo.png' id='nba-logo'>
             <h3 id='quote-message'>All-time Best NBA Players' Quotes</h3>
             <h6 id='quote-person'>Anonymous</h6>
         </div>
