--- a/index.html
+++ b/index.html
@@ -15,27 +15,27 @@
         <div class='buttons'>
             <div class='nba-image'>
                 <img src="assets/nba4.png" id='curry-img'>
-                <button type="button" id='curry-quote' class="btn-click">Stephen Curry</button>
+                <button type="button" id='curry-quote' class="btn-click">Get Quote</button>
             </div>
 
             <div class='nba-image'>
                 <img src="assets/nba1.png" id='jordan-img'>
-                <button type="button" id='jordan-quote' class="btn-click">Michael Jordan</button>
+                <button type="button" id='jordan-quote' class="btn-click">Get Quote</button>
             </div>
 
             <div class='nba-image'>
                 <img src="assets/nba2.png" id='durant-img'>
-                <button type="button" id='durant-quote' class="btn-click">Kevin Durant</button>
+                <button type="button" id='durant-quote' class="btn-click">Get Quote</button>
             </div>
 
             <div class='nba-image'>
                 <img src="assets/nba5.png" id='kobe-img'>
-                <button type="button" id='kobe-quote' class="btn-click">Kobe Bryant</button>
+                <button type="button" id='kobe-quote' class="btn-click">Get Quote</button>
             </div>
 
             <div class='nba-image' >
                 <img src="assets/nba3.png" id='lebron-img'>
-                <button type="button" id='lebron-quote' class="btn-click">Lebron James</button>
+                <button type="button" id='lebron-quote' class="btn-click">Get Quote</button>
             </div>
         </div>
 
